@@ -1,1 +1,1 @@
-2.0rc1
+2.0rc2
